--- a/Student_Results/Student_Results/Admin/Course_Management.html
+++ b/Student_Results/Student_Results/Admin/Course_Management.html
@@ -3,9 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>User Management</title>
+    <link rel="stylesheet" href="style/userreg.css">
 </head>
 <body>
-    
+
+    <h1 class="heading">COURSE-MANAGEMENT</h1>
+
+    <div class="card">
+        <form>
+            <label for="userid">User ID:</label>
+            <input type="text" id="userid" name="userid" placeholder="Enter User ID">
+
+            <label for="username">User Name:</label>
+            <input type="text" id="username" name="username" placeholder="Enter User Name">
+
+            <label for="usertype">User Type:</label>
+            <select id="usertype" name="usertype">
+                <option value="">-- Choose User Type --</option>
+                <option value="admin">Admin</option>
+                <option value="faculty">Faculty</option>
+                <option value="student">Student</option>
+            </select>
+
+            <br><br>
+            <button type="submit">Add User</button>
+        </form>
+    </div>
+
+    <div class="card">
+        <h3>Existing Users</h3>
+        <table border="1">
+            <thead>
+                <tr>
+                    <th>User ID</th>
+                    <th>User Name</th>
+                    <th>User Type</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>U101</td>
+                    <td>Praveen</td>
+                    <td>Admin</td>
+                    <td>
+                        <button>Edit</button>
+                        <button>Delete</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>U102</td>
+                    <td>Rohit</td>
+                    <td>Faculty</td>
+                    <td>
+                        <button>Edit</button>
+                        <button>Delete</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
 </body>
 </html>
