--- a/Student_Results/Student_Results/Admin/Profile.html
+++ b/Student_Results/Student_Results/Admin/Profile.html
@@ -1,42 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>Admin Profile</title>
     <link rel="stylesheet" href="style/profile.css">
 </head>
 <body>
+
     <h1 class="heading">ADMIN PROFILE</h1>
+
     <div class="card">
         <table>
-        <tr>
-            <td>
-                <img src="media/admin.jpeg" alt="Admin Image" class="photo">
-            </td>
-            <td><p>Welcome to your Admin Dashboard<br>Manage users, results, and<br>anouncements here.</p></td>
-        </tr>
-        <tr>
-            <td>
-                <ul>
-                    <li>Manage user</li><li>Post Anouncement</li><li>View Logs</li>
-                </ul>
-            </td>
-        </tr>
-    </table>
+            <tr>
+                <td style="width: 150px;">
+                    <img src="media/admin.jpeg" alt="Admin Photo" class="photo">
+                </td>
+                <td>
+                    <p>
+                        Welcome, <strong>Rohit</strong>.<br>
+                        You have full administrative privileges to manage users, results, and announcements.<br>
+                        Use the dashboard to keep the system organized and up-to-date.
+                    </p>
+                </td>
+            </tr>
+        </table>
 
-    <hr>
-    <h1>Admin Details</h1>
-    <table>
-        <tr>
-            <th>Name</th><th>Email</th>
-        </tr>
-        <tr>
-            <td><i>Rohit</i></td><td><u>admin@univ.edu</u></td>
-        </tr>
-        <tr>
-            <td>Role</td><td>Administrator</td>
-        </tr>
-    </table>
+        <h2>Quick Actions</h2>
+        <ul>
+            <li><a href="user_management.html">Manage Users</a></li>
+            <li>Post Announcements</li>
+            <li>View Activity Logs</li>
+        </ul>
+
+        <hr>
+
+        <h2>Admin Details</h2>
+        <table>
+            <tr>
+                <th>Name</th>
+                <td>Rohit</td>
+            </tr>
+            <tr>
+                <th>Email</th>
+                <td>admin@univ.edu</td>
+            </tr>
+            <tr>
+                <th>Role</th>
+                <td>Administrator</td>
+            </tr>
+        </table>
     </div>
-    
-    </body>
+
+</body>
 </html>
