--- a/Student_Results/Student_Results/Admin/Result/Upd_result.html
+++ b/Student_Results/Student_Results/Admin/Result/Upd_result.html
@@ -3,9 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Update Student Result</title>
+            <link rel="stylesheet" href="result.css">
+
 </head>
 <body>
-    
+    <h1>UPDATE STUDENT RESULT</h1>
+    <form action="update_result.html" method="post">
+        <label for="student-id">Student ID (required):</label><br>
+        <input type="text" id="student-id" name="student_id" required><br><br>
+
+        <label for="student-name">Student Name:</label><br>
+        <input type="text" id="student-name" name="student_name"><br><br>
+
+        <label for="subject1">Subject 1:</label><br>
+        <input type="text" id="subject1" name="subject1"><br>
+        <label for="marks1">Marks:</label><br>
+        <input type="number" id="marks1" name="marks1" min="0" max="100"><br><br>
+
+        <label for="subject2">Subject 2:</label><br>
+        <input type="text" id="subject2" name="subject2"><br>
+        <label for="marks2">Marks:</label><br>
+        <input type="number" id="marks2" name="marks2" min="0" max="100"><br><br>
+
+        <label for="subject3">Subject 3:</label><br>
+        <input type="text" id="subject3" name="subject3"><br>
+        <label for="marks3">Marks:</label><br>
+        <input type="number" id="marks3" name="marks3" min="0" max="100"><br><br>
+
+        <button type="submit">Update Result</button>
+    </form>
 </body>
 </html>
