--- a/Student_Results/Student_Results/Faculty/View_course.html
+++ b/Student_Results/Student_Results/Faculty/View_course.html
@@ -2,10 +2,52 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>View Courses</title>
+            <link rel="stylesheet" href="style/other.css">
 </head>
 <body>
-    
+
+    <h1>VIEW COURSES</h1>
+
+    <div class="card">
+        <table>
+            <tr>
+                <th>Course ID</th>
+                <th>Course Name</th>
+                <th>Department</th>
+                <th>Semester</th>
+                <th>Credits</th>
+            </tr>
+            <tr>
+                <td>CS101</td>
+                <td>Introduction to Programming</td>
+                <td>Computer Science</td>
+                <td>1</td>
+                <td>4</td>
+            </tr>
+            <tr>
+                <td>CS201</td>
+                <td>Data Structures</td>
+                <td>Computer Science</td>
+                <td>3</td>
+                <td>4</td>
+            </tr>
+            <tr>
+                <td>CS301</td>
+                <td>Database Systems</td>
+                <td>Computer Science</td>
+                <td>5</td>
+                <td>3</td>
+            </tr>
+            <tr>
+                <td>CS401</td>
+                <td>Operating Systems</td>
+                <td>Computer Science</td>
+                <td>7</td>
+                <td>4</td>
+            </tr>
+        </table>
+    </div>
+
 </body>
 </html>
