--- a/Student_Results/Student_Results/Faculty/View_student.html
+++ b/Student_Results/Student_Results/Faculty/View_student.html
@@ -2,10 +2,65 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>View Students</title>
+    <link rel="stylesheet" href="style/other.css">
 </head>
 <body>
-    
+
+    <h1>VIEW STUDENTS</h1>
+
+    <div class="card">
+        <table>
+            <tr>
+                <th>Student ID</th>
+                <th>Student Name</th>
+                <th>Email</th>
+                <th>Roll No.</th>
+                <th>Batch</th>
+                <th>Department</th>
+            </tr>
+            <tr>
+                <td>20231234</td>
+                <td>Rohit Singh</td>
+                <td>rohit.singh@univ.edu</td>
+                <td>101</td>
+                <td>2023</td>
+                <td>Computer Science</td>
+            </tr>
+            <tr>
+                <td>20231235</td>
+                <td>Anita Sharma</td>
+                <td>anita.sharma@univ.edu</td>
+                <td>102</td>
+                <td>2023</td>
+                <td>Computer Science</td>
+            </tr>
+            <tr>
+                <td>20231236</td>
+                <td>Vikram Patil</td>
+                <td>vikram.patil@univ.edu</td>
+                <td>103</td>
+                <td>2023</td>
+                <td>Computer Science</td>
+            </tr>
+            <tr>
+                <td>20231237</td>
+                <td>Praveen Gupta</td>
+                <td>parveen.gupta@univ.edu</td>
+                <td>104</td>
+                <td>2023</td>
+                <td>Computer Science</td>
+            </tr>
+            <tr>
+                <td>20231238</td>
+                <td>Aditya Mihra</td>
+                <td>aditya.mihra@univ.edu</td>
+                <td>105</td>
+                <td>2023</td>
+                <td>Computer Science</td>
+            </tr>
+        </table>
+    </div>
+
 </body>
 </html>
