--- a/Student_Results/Student_Results/Faculty/profile.html
+++ b/Student_Results/Student_Results/Faculty/profile.html
@@ -1,41 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>Faculty Profile</title>
-    <link rel="stylesheet" href="style\profile.css">
+    <link rel="stylesheet" href="style/profile.css">
 </head>
 <body>
-    
-    <h1 class="heading">Faculty Profile</h1>
-    <div class="card"> 
+
+    <h1 class="heading">FACULTY PROFILE</h1>
+
+    <div class="card">
         <table>
-        <tr>
-            <td>
-                <img src="media/faculty.png" alt="Faculty Image" width=200 class="photo">
-            </td>
-            <td><p>Welcome to your Faculty Dashboard<br>Manage courses, view students, and<br>profile details here.</p></td>
-        </tr>
-        <br>
-        <tr>
-            <td colspan="2">
-                <ul class="list">
-                    <li><a href="View_course.html">View Courses</a></li><li><a href="View_student.html">View Students</a></li><li><a href="View_result.html">View Results</a></li>
-                </ul>
-            </td>
-        </tr>
-    </table>
+            <tr>
+                <td style="width: 150px;">
+                    <img src="media/faculty.png" alt="Faculty Photo" class="photo">
+                </td>
+                <td>
+                    <p>
+                        Welcome, <strong>Tarak Mehta</strong>.<br>
+                        You can manage courses, view students, and update results.<br>
+                        Use the dashboard to keep your academic activities organized.
+                    </p>
+                </td>
+            </tr>
+        </table>
+
+        <h2>Quick Actions</h2>
+        <ul>
+            <li><a href="View_course.html">View Courses</a></li>
+            <li><a href="View_student.html">View Students</a></li>
+            <li><a href="View_result.html">View Results</a></li>
+        </ul>
+
         <hr>
-    <h2>Faculty Details</h2>
-    <table>
-        <tr>
-            <th>Name</th><td>Tarak Mehta</td>
-        </tr>
-        <tr>
-            <th>Email</th><td><u>tarakmehta@univ.edu</u></td>
-        </tr>
-        <tr>
-            <th>Department</th><td>Computer Science</td>
-        </tr>
-    </table></div>
-    </body>
+
+        <h2>Faculty Details</h2>
+        <table>
+            <tr>
+                <th>Name</th>
+                <td>Tarak Mehta</td>
+            </tr>
+            <tr>
+                <th>Email</th>
+                <td>tarakmehta@univ.edu</td>
+            </tr>
+            <tr>
+                <th>Department</th>
+                <td>Computer Science</td>
+            </tr>
+        </table>
+    </div>
+
+</body>
 </html>
