--- a/Student_Results/Student_Results/Stud_authent.html
+++ b/Student_Results/Student_Results/Stud_authent.html
@@ -20,11 +20,11 @@
             Student
             <form action="Students/S_index.html" method="post">
                 <h2>Student Login</h2>
-                <label for="faculty-username">Username:</label>
-                <input type="text" id="faculty-username" name="username" required><br><br>
+                <label for="student">Username:</label>
+                <input type="text" id="student" name="username" required><br><br>
                 
-                <label for="faculty-password">Password:</label>
-                <input type="password" id="faculty-password" name="password" required><br><br>
+                <label for="student">Password:</label>
+                <input type="password" id="student-password" name="password" required><br><br>
                 
                 <button type="submit">Login</button>
             </form>
