--- a/Student_Results/Student_Results/Students/report.html
+++ b/Student_Results/Student_Results/Students/report.html
@@ -2,10 +2,69 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Student Report</title>
+    <link rel="stylesheet" href="style/other2.css">
 </head>
 <body>
-    
+
+    <h1>STUDENT REPORT</h1>
+
+    <div class="card">
+        <h2>STUDENT DETAILS</h2>
+        <table>
+            <tr>
+                <th>Name</th>
+                <td>Rohit Singh</td>
+            </tr>
+            <tr>
+                <th>Student ID</th>
+                <td>20231234</td>
+            </tr>
+            <tr>
+                <th>Course</th>
+                <td>CS101 - Introduction to Programming</td>
+            </tr>
+            <tr>
+                <th>Batch</th>
+                <td>2023</td>
+            </tr>
+        </table>
+
+        <h2>Marks</h2>
+        <table>
+            <tr>
+                <th>Subject</th>
+                <th>Marks Obtained</th>
+                <th>Maximum Marks</th>
+            </tr>
+            <tr>
+                <td>Programming</td>
+                <td>85</td>
+                <td>100</td>
+            </tr>
+            <tr>
+                <td>Mathematics</td>
+                <td>78</td>
+                <td>100</td>
+            </tr>
+        </table>
+
+        <h2>Overall Performance</h2>
+        <table>
+            <tr>
+                <th>Total Marks</th>
+                <td>163</td>
+            </tr>
+            <tr>
+                <th>Percentage</th>
+                <td>81.5%</td>
+            </tr>
+            <tr>
+                <th>Grade</th>
+                <td>A</td>
+            </tr>
+        </table>
+    </div>
+
 </body>
 </html>
