--- a/Student_Results/Student_Results/Students/view_course.html
+++ b/Student_Results/Student_Results/Students/view_course.html
@@ -2,10 +2,59 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>View Courses</title>
+    <link rel="stylesheet" href="style/other2.css">
 </head>
 <body>
-    
+
+    <h1>MY COURSES</h1>
+
+    <div class="card">
+        <table>
+            <tr>
+                <th>Course ID</th>
+                <th>Course Name</th>
+                <th>Instructor</th>
+                <th>Credits</th>
+                <th>Semester</th>
+            </tr>
+            <tr>
+                <td>CS101</td>
+                <td>Introduction to Programming</td>
+                <td>Tarak Mehta</td>
+                <td>4</td>
+                <td>Semester 1</td>
+            </tr>
+            <tr>
+                <td>CS102</td>
+                <td>Data Structures</td>
+                <td>Anita Sharma</td>
+                <td>4</td>
+                <td>Semester 1</td>
+            </tr>
+            <tr>
+                <td>CS103</td>
+                <td>Computer Networks</td>
+                <td>Vikram Patil</td>
+                <td>3</td>
+                <td>Semester 2</td>
+            </tr>
+            <tr>
+                <td>CS104</td>
+                <td>Database Systems</td>
+                <td>Sanya Gupta</td>
+                <td>3</td>
+                <td>Semester 2</td>
+            </tr>
+            <tr>
+                <td>CS105</td>
+                <td>Operating Systems</td>
+                <td>Aditya Mehra</td>
+                <td>4</td>
+                <td>Semester 2</td>
+            </tr>
+        </table>
+    </div>
+
 </body>
 </html>
