--- a/Student_Results/Student_Results/Admin/Result.html
+++ b/Student_Results/Student_Results/Admin/Result.html
@@ -3,73 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Result</title>
+    <title>Result Management</title>
+    <link rel="stylesheet" href="style/userreg.css">
 </head>
 <body>
-    <center>
-        <h1>Admin Result Dashboard</h1>
-    </center>
-        <br>
-        <br>
-        <ul>
-            <li><a href="Result/Add_result.html">Add Result</a></li>
-            <li><a href="Result/Upd_result.html">Update Result</a></li>
-            <li><a href="Result/Del_result.html">Delete Result</a></li>
-            <li><a href=""></a> Push Notification Of Results</li>
-        </ul>
-        <br>
-        <hr>
+
+    <h1 class="heading">RESULT MANAGEMENT</h1>
+
+    <div class="card">
+        <form>
+            <label for="studentid">Student ID:</label>
+            <input type="text" id="studentid" name="studentid" placeholder="Enter Student ID">
+
+            <label for="courseid">Course ID:</label>
+            <input type="text" id="courseid" name="courseid" placeholder="Enter Course ID">
+
+            <label for="marks">Marks:</label>
+            <input type="number" id="marks" name="marks" placeholder="Enter Marks">
+
+            <label for="grade">Grade:</label>
+            <input type="text" id="grade" name="grade" placeholder="Enter Grade">
+
+            <br><br>
+            <button type="submit">Add Result</button>
+        </form>
+    </div>
+
+    <div class="card">
+        <h3>Existing Results</h3>
         <table border="1">
-            <tr>
-                <th>S.no</th>
-                <th>RegId</th>
-                <th>Name</th>
-                <th>Course</th>
-                <th>Marks</th>
-                <th>Action</th>
-            </tr>
-            <tr>
-                <td>1</td>
-                <td>2001</td>
-                <td>Praveen</td>
-                <td>Data Structure</td>
-                <td>86</td>
-                <td><ul><li>Edit</li><li>Delete</li></ul></td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>2002</td>
-                <td>Praveen</td>
-                <td>Database Management System</td>
-                <td>86</td>
-                <td><ul><li>Edit</li><li>Delete</li></ul></td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>2006</td>
-                <td>Praveen</td>
-                <td>CTSD</td>
-                <td>86</td>
-                <td><ul><li>Edit</li><li>Delete</li></ul></td>
-            </tr>
-            <tr>
-                <td>4</td>
-                <td>2007</td>
-                <td>Praveen</td>
-                <td>CTSD</td>
-                <td>86</td>
-                <td><ul><li>Edit</li><li>Delete</li></ul></td>
-            </tr>
-            <tr>
-                <td>5</td>
-                <td>2009</td>
-                <td>Praveen</td>
-                <td>Artificial Intelligence</td>
-                <td>86</td>
-                <td><ul><li>Edit</li><li>Delete</li></ul></td>
-            </tr>
+            <thead>
+                <tr>
+                    <th>Student ID</th>
+                    <th>Course ID</th>
+                    <th>Marks</th>
+                    <th>Grade</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>32557</td>
+                    <td>Operating System</td>
+                    <td>85</td>
+                    <td>A</td>
+                    <td>
+                        <button>Edit</button>
+                        <button>Delete</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>32559</td>
+                    <td>Data Structures</td>
+                    <td>76</td>
+                    <td>B+</td>
+                    <td>
+                        <button>Edit</button>
+                        <button>Delete</button>
+                    </td>
+                </tr>
+            </tbody>
         </table>
-    
-    
+    </div>
+
 </body>
 </html>
