--- a/Student_Results/Student_Results/Admin/index.html
+++ b/Student_Results/Student_Results/Admin/index.html
@@ -44,13 +44,13 @@
             </a>
         </div>
         <div class="card">
-            <a href="Profil.html">
+            <a href="Profile.html">
                 <img src="media/admin.jpeg" height="120" alt="Profile Logo" class="image"><br>
                 Profile
             </a>
         </div>
         <div class="card">
-            <a href="D:\Front_end\Student_Results\Loginpage.html">
+            <a href="../Loginpage.html">
                 <img src="media/logout.png" height="120" alt="Logout Logo" class="image"><br>
                 Logout
             </a>
@@ -58,4 +58,3 @@
     </div>
 </body>
 </html>
-
