--- a/Student_Results/Student_Results/Faculty/View_result.html
+++ b/Student_Results/Student_Results/Faculty/View_result.html
@@ -2,10 +2,65 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <title>View Results</title>
+    <link rel="stylesheet" href="style/other.css">
 </head>
 <body>
-    
+
+    <h1>VIEW STUDENT RESULTS</h1>
+
+    <div class="card">
+        <table>
+            <tr>
+                <th>Student ID</th>
+                <th>Student Name</th>
+                <th>Course</th>
+                <th>Subject 1</th>
+                <th>Marks 1</th>
+                <th>Subject 2</th>
+                <th>Marks 2</th>
+                <th>Total</th>
+                <th>Percentage</th>
+                <th>Grade</th>
+            </tr>
+            <tr>
+                <td>20231234</td>
+                <td>Rohit Singh</td>
+                <td>CS101</td>
+                <td>Programming</td>
+                <td>85</td>
+                <td>Mathematics</td>
+                <td>78</td>
+                <td>163</td>
+                <td>81.5%</td>
+                <td>A</td>
+            </tr>
+            <tr>
+                <td>20231235</td>
+                <td>Anita Sharma</td>
+                <td>CS101</td>
+                <td>Programming</td>
+                <td>75</td>
+                <td>Mathematics</td>
+                <td>82</td>
+                <td>157</td>
+                <td>78.5%</td>
+                <td>A-</td>
+            </tr>
+            <tr>
+                <td>20231236</td>
+                <td>Vikram Patil</td>
+                <td>CS101</td>
+                <td>Programming</td>
+                <td>68</td>
+                <td>Mathematics</td>
+                <td>74</td>
+                <td>142</td>
+                <td>71%</td>
+                <td>B</td>
+            </tr>
+        </table>
+    </div>
+
 </body>
 </html>
