--- a/Student_Results/Student_Results/Admin/cours_faculty_mapping.html
+++ b/Student_Results/Student_Results/Admin/cours_faculty_mapping.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Course–Faculty Mapping</title>
+    <title>Course_Faculty Mapping</title>
     <link rel="stylesheet" href="style/userreg.css">
 </head>
 <body>
 
-    <h1 class="heading">COURSE–FACULTY MAPPING</h1>
+    <h1 class="heading">COURSE_FACULTY MAPPING</h1>
 
     <div class="card">
         <form>
