--- a/Student_Results/Student_Results/Faculty/index.html
+++ b/Student_Results/Student_Results/Faculty/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Faculty Dashboard</title>
     <link rel="stylesheet" href="style/F_index.css">
 </head>
 <body>
